data/derived/comb/progs/unify/prog4419.ml.out
Characters 107-108:
  a = ((i+j+s)/10, t::((i+j+s) mod 10)) in
                   ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
